--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: windows-2019, shell: cmd }
+            - { os: windows-2016, shell: cmd }
     steps: 
     - run: | 
         perl -v
@@ -42,20 +42,20 @@ jobs:
     - run: |
         C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
         7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
-      if: matrix.steps.cache-cmake_extra_tools.outputs.cache-hit != 'true'
+      if: steps.cache-cmake_extra_tools.outputs.cache-hit != 'true'
     - run: |
         C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/OpenCV4.2.0_mini.zip --no-check-certificate -nv
         7z x OpenCV4.2.0_mini.zip -o"%SystemDrive%" -y
-      if: matrix.steps.cache-opencv.outputs.cache-hit != 'true'
+      if: steps.cache-opencv.outputs.cache-hit != 'true'
     - run: | 
         powershell -Command "Install-WindowsFeature Server-Media-Foundation"
         wget http://www.ensta-bretagne.fr/lebars/Share/windows_server_core_prereq.zip --no-check-certificate -nv
         cmd //c "7z x windows_server_core_prereq.zip -o"%SystemRoot%" -y"
     - run: | 
         reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\OpenCV /v "OpenCV4.2.0" /d "%SystemDrive%\\OpenCV4.2.0" /f
-        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin
+        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin & true # Non-zero exit code...?
     - run: | 
-        cmake -G "Visual Studio 16" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
+        cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
     - uses: xresloader/upload-to-github-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
