--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: windows-2016, shell: cmd }
+            - { os: windows-2019, shell: cmd }
     steps: 
     # Comment
     - run: | 
@@ -57,11 +57,11 @@ jobs:
         rem For OpenCV
         powershell -Command "Install-WindowsFeature Server-Media-Foundation"
         C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/windows_server_core_prereq.zip --no-check-certificate -nv
-        7z x windows_server_core_prereq.zip -o"%SystemRoot%" -y
+        7z x windows_server_core_prereq.zip -o"%SystemRoot%" -y & rem ksuser.dll already on windows-2016...
         reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\OpenCV /v "OpenCV4.2.0" /d "%SystemDrive%\\OpenCV4.2.0" /f
         %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin & rem Non-zero exit code...?
     - run: | 
-        cmake -G "Visual Studio 15" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
+        cmake -G "Visual Studio 17" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
     - uses: xresloader/upload-to-github-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
