--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -56,10 +56,14 @@ jobs:
     - run: | 
         rem For OpenCV
         powershell -Command "Install-WindowsFeature Server-Media-Foundation"
+        rem powerShell -Command "Add-WindowsCapability -Online -Name Tools.Graphics.DirectX*"
+        rem powerShell -Command "Add-WindowsCapability -Online -Name Media.WindowsMediaPlayer*"
+        rem powerShell -Command "Add-WindowsCapability -Online -Name Browser.InternetExplorer*"
+        rem powerShell -Command "Add-WindowsCapability -Online -Name ServerCore.AppCompatibility*"
         C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/windows_server_core_prereq.zip --no-check-certificate -nv
         7z x windows_server_core_prereq.zip -o"%SystemRoot%" -y & rem ksuser.dll already on windows-2016...
         reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\OpenCV /v "OpenCV4.2.0" /d "%SystemDrive%\\OpenCV4.2.0" /f
-        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin & rem Non-zero exit code...?
+        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin
     - run: | 
         cmake -G "Visual Studio 17" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
     - uses: xresloader/upload-to-github-release@v1
