--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,56 +20,27 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: windows-2019, shell: cmd }
+            - { os: windows-2019, shell: cmd, arch: x86, runtime: vc14, CMAKE_PARAM_G: "Visual Studio 14", CMAKE_PARAM_A: Win32, CFG: ${{ arch }}_${{ runtime }}, CHOCO_VS_TOOLS: "vcbuildtools", CPCFG: -win32, PY_V_MDM: 3.4, PY_V_MM: 34 }
+            - { os: windows-2019, shell: cmd, arch: x64, runtime: vc16, CMAKE_PARAM_G: "Visual Studio 16", CMAKE_PARAM_A: x64, CFG: ${{ arch }}_${{ runtime }}, CPCFG: -win_amd64, PY_V_MDM: 3.9, PY_V_MM: 39 }
     steps: 
-    # Comment
-    - run: | 
-        echo 0
-        rem Comment
-        echo 1
-    - run: | 
-        # Comment
-        perl -v
-        sed --version
-      shell: bash
     - uses: actions/checkout@v2
-#    - run: |
-#        choco install -y -r --no-progress wget
-    - uses: actions/cache@v2
-      id: cache-cmake_extra_tools
+    - uses: actions/setup-python@v2
       with:
-        path: 'C:\cmake_extra_tools'
-        key: ${{ runner.os }}-cmake_extra_tools 
-    - uses: actions/cache@v2
-      id: cache-opencv
-      with:
-        path: 'C:\OpenCV4.2.0'
-        key: ${{ runner.os }}-opencv 
+        python-version: ${{ matrix.cfg.PY_V_MDM }}
+        architecture: ${{ matrix.cfg.arch }}
     - run: |
-        C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
-        7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
-      if: steps.cache-cmake_extra_tools.outputs.cache-hit != 'true'
+        python --version
+        echo ${{ matrix.cfg.CFG }}
     - run: |
-        C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/OpenCV4.2.0_mini.zip --no-check-certificate -nv
-        7z x OpenCV4.2.0_mini.zip -o"%SystemDrive%" -y
-      if: steps.cache-opencv.outputs.cache-hit != 'true'
-    - run: | 
-        rem For OpenCV
-        powershell -Command "Install-WindowsFeature Server-Media-Foundation"
-        rem powerShell -Command "Add-WindowsCapability -Online -Name Tools.Graphics.DirectX*"
-        rem powerShell -Command "Add-WindowsCapability -Online -Name Media.WindowsMediaPlayer*"
-        rem powerShell -Command "Add-WindowsCapability -Online -Name Browser.InternetExplorer*"
-        rem powerShell -Command "Add-WindowsCapability -Online -Name ServerCore.AppCompatibility*"
-        C:\msys64\usr\bin\wget http://www.ensta-bretagne.fr/lebars/Share/windows_server_core_prereq.zip --no-check-certificate -nv
-        7z x windows_server_core_prereq.zip -o"%SystemRoot%" -y & rem ksuser.dll already on windows-2016...?
-        reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\OpenCV /v "OpenCV4.2.0" /d "%SystemDrive%\\OpenCV4.2.0" /f
-        %SystemDrive%\cmake_extra_tools\pathman /as %SystemDrive%\OpenCV4.2.0\x86\vc15\bin & true & rem Non-zero exit code...?
-    - run: | 
-        cmake -G "Visual Studio 16" -A Win32 -T v141_xp . & cmake --build . --config Release --target DisplayImage
-    - uses: xresloader/upload-to-github-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        file: "./Release/DisplayImage.exe"
-        overwrite: true
-        tag_name: autotagname
+        choco install -y -r --no-progress wget
+    - run: choco install -y vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
+      if: matrix.cfg.CHOCO_VS_TOOLS=="vcbuildtools"
+    - run: choco install -y ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
+      if: matrix.cfg.CHOCO_VS_TOOLS!="vcbuildtools"
+    - run: choco install -y doxygen.install graphviz & python -m pip install --upgrade pip==19.1.1 & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & refreshenv.cmd
+      if: matrix.cfg.PY_V_MM=="34"
+    - run: choco install -y doxygen.install graphviz & python -m pip install --upgrade pip & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install --upgrade breathe sphinx-issues sphinx-tabs sphinx_rtd_theme & refreshenv.cmd
+      if: matrix.cfg.PY_V_MM!="34"
+    - run: |
+        cmake .
+        cmake --build .
