--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,3 @@
 cmake_minimum_required(VERSION 2.8)
-project(DisplayImage)
-#find_package(OpenCV 3.2 REQUIRED)
-find_package(OpenCV)
-include_directories(${OpenCV_INCLUDE_DIRS})
-add_executable(DisplayImage DisplayImage.cpp)
-if(OpenCV_VERSION VERSION_LESS "4")
-else()
-	if(MSVC)
-	else()
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") # CMAKE_CXX_STANDARD does not seem to work on Mac OS...
-	endif()
-endif()
-if(MSVC)
-else()
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
-endif()
-target_link_libraries(DisplayImage ${OpenCV_LIBS})
+project(Hello)
+add_executable(Hello Main.c)
