--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -34,13 +34,13 @@ jobs:
     - run: |
         choco install -y -r --no-progress wget
     - run: choco install -y vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
-      if: matrix.cfg.CHOCO_VS_TOOLS=="vcbuildtools"
+      if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
     - run: choco install -y ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
-      if: matrix.cfg.CHOCO_VS_TOOLS!="vcbuildtools"
+      if: matrix.cfg.CHOCO_VS_TOOLS!='vcbuildtools'
     - run: choco install -y doxygen.install graphviz & python -m pip install --upgrade pip==19.1.1 & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & refreshenv.cmd
-      if: matrix.cfg.PY_V_MM=="34"
+      if: matrix.cfg.PY_V_MM=='34'
     - run: choco install -y doxygen.install graphviz & python -m pip install --upgrade pip & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install --upgrade breathe sphinx-issues sphinx-tabs sphinx_rtd_theme & refreshenv.cmd
-      if: matrix.cfg.PY_V_MM!="34"
+      if: matrix.cfg.PY_V_MM!='34'
     - run: |
         cmake .
         cmake --build .
