--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -40,14 +40,18 @@ jobs:
       shell: pwsh
       if: runner.os == 'Windows'
     - run: |        
-        rem Take 8 min...
-        rem choco uninstall -y mingw strawberryperl
-        wget http://www.ensta-bretagne.fr/lebars/Share/qt-sdk-win-opensource-2010.05.exe --no-check-certificate -nv
-        move /Y qt-sdk-win-opensource-2010.05.exe %SystemDrive%\
-        rem Take 5 min...
-        %SystemDrive%\qt-sdk-win-opensource-2010.05.exe /S
-        del /f /q %SystemDrive%\qt-sdk-win-opensource-2010.05.exe
-        echo C:\Qt\2010.05\qt\bin;C:\Qt\2010.05\bin;C:\Qt\2010.05\mingw\bin>>%GITHUB_PATH%
+        wget http://download.qt.io/archive/qt/5.12/5.12.6/qt-opensource-windows-x86-5.12.6.exe --no-check-certificate -nv
+        move /Y qt-opensource-windows-x86-5.12.6.exe %SystemDrive%\
+        wget http://www.ensta-bretagne.fr/lebars/Share/qt-installer-5.12.6-mingw73_32.qs --no-check-certificate -nv
+        move /Y qt-installer-5.12.6-mingw73_32.qs %SystemDrive%\
+        netsh advfirewall set allprofiles state on
+        netsh advfirewall firewall add rule name="Qt offline installer" dir=out action=block program="%SystemDrive%\qt-opensource-windows-x86-5.12.6.exe" enable=yes
+        rem Take several min...
+        %SystemDrive%\qt-opensource-windows-x86-5.12.6.exe --script %SystemDrive%\qt-installer-5.12.6-mingw73_32.qs
+        netsh advfirewall firewall del rule name="Qt offline installer"
+        netsh advfirewall set allprofiles state off
+        del /f /q %SystemDrive%\qt-opensource-windows-x86-5.12.6.exe
+        echo C:\Qt\Qt5.12.6\5.12.6\mingw73_32\bin;C:\Qt\Qt5.12.6\Tools\mingw730_32\bin>>%GITHUB_PATH%
       shell: cmd
       if: contains(matrix.cfg.os, 'windows')
     - run: |
