--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,68 +1,42 @@
-#on: [push, pull_request]
-on: 
+on:
     push:
         branches: '**'
         tags: '' # Restrict to blank tags
     pull_request:
 
 jobs:
- # This job can be removed if a new release should not be created...
-# deploy:
-#    runs-on: ubuntu-latest
-#    steps: 
-#    - uses: actions/create-release@v1
-#      id: create_release
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      with:
-#        draft: true
-#        tag_name: autotagname
-#        release_name: autotagname
-
- matrix:
+ tests:
     runs-on: ${{ matrix.cfg.os }}
-    defaults:
-        run:
-            shell: ${{ matrix.cfg.shell }}
+    env:
+        CC: ${{ matrix.cfg.cc }}
+        CXX: ${{ matrix.cfg.cxx }}
     strategy:
         matrix:
             cfg:
-            - { os: windows-2019, shell: cmd, arch: x86, runtime: mingw, cmake_params: '-G "MSYS Makefiles"', desc: 'Windows Qt' }
+            - { os: ubuntu-18.04, cc: gcc-8, cxx: g++-8, py_v_maj: 3, py_v_min: 6, desc: 'Ubuntu 18.04 GCC 8 Python 3.6 tests' }
+    name: ${{ matrix.cfg.desc }}
     steps: 
     - uses: actions/checkout@v2
       with:
         submodules: true
         fetch-depth: 0
         clean: false
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.cfg.py_v_maj }}.${{ matrix.cfg.py_v_min }}
     - run: |
-        (New-Object System.Net.WebClient).DownloadFile("http://www.ensta-bretagne.fr/lebars/Share/windows_extra_tools.zip", "C:\Windows\Temp\windows_extra_tools.zip") 
-        7z x C:\Windows\Temp\windows_extra_tools.zip -o"C:\Windows" -y
-      shell: pwsh
-      if: runner.os == 'Windows'
-    - run: |        
-        wget http://download.qt.io/archive/qt/5.12/5.12.6/qt-opensource-windows-x86-5.12.6.exe --no-check-certificate -nv
-        move /Y qt-opensource-windows-x86-5.12.6.exe %SystemDrive%\
-        wget http://www.ensta-bretagne.fr/lebars/Share/qt-installer-5.12.6-mingw73_32.qs --no-check-certificate -nv
-        move /Y qt-installer-5.12.6-mingw73_32.qs %SystemDrive%\
-        netsh advfirewall set allprofiles state on
-        netsh advfirewall firewall add rule name="Qt offline installer" dir=out action=block program="%SystemDrive%\qt-opensource-windows-x86-5.12.6.exe" enable=yes
-        rem Take several min...
-        %SystemDrive%\qt-opensource-windows-x86-5.12.6.exe --script %SystemDrive%\qt-installer-5.12.6-mingw73_32.qs
-        netsh advfirewall firewall del rule name="Qt offline installer"
-        netsh advfirewall set allprofiles state off
-        del /f /q %SystemDrive%\qt-opensource-windows-x86-5.12.6.exe
-        echo C:\Qt\Qt5.12.6\5.12.6\mingw73_32\bin;C:\Qt\Qt5.12.6\Tools\mingw730_32\bin>>%GITHUB_PATH%
-      shell: cmd
-      if: contains(matrix.cfg.os, 'windows')
+        python -c "import sys; print(sys.version)"
+        gcc --version
+        g++ --version
     - run: |
-        echo %PATH%
-        where gcc
-        where g++
-      shell: cmd
-      if: runner.os == 'Windows'
-    - run: |
-        cmake ${{ matrix.cfg.cmake_params }} .
-        cmake --build .
-        ./Hello
-        cd ../..
-      shell: bash
+        sudo apt-get -q update ; sudo apt-get -y install flex bison libeigen3-dev || true
+  
+        # For documentation
+        sudo pip install sphinx sphinx_rtd_theme breathe sphinx-issues sphinx-tabs
+        sudo apt-get -y install doxygen graphviz
+
+        # For Python wrapping
+        #sudo pip install wheel
+        #sudo pip install --upgrade pip
+        #sudo pip install pyibex
+        #sudo pip install --upgrade pyibex==1.8.0
